# bara_system

./: .gitignore  AGENT_GUIDE.md  README.md
backend/: .env.example  .gitignore  config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/middleware/: __init__.py  auth.py  csrf.py  ip_filter.py  rate_limit.py  request_log.py  security_headers.py
backend/app/api/routes/: activities.py  auth.py  backup.py  chat.py  (+8 more)
backend/app/core/: config.py  constants.py  database.py  events.py  exceptions.py  http_client.py  logging.py  network.py  rate_limiter.py  security.py  ssl.py  task_queue.py
backend/app/models/: __init__.py  activity.py  auth.py  base.py  collected_info.py  config_schema.py  conversation.py  enums.py  events.py  good_example.py  health.py  memory.py  mission.py  notification.py  platform.py  settings.py
backend/app/repositories/: __init__.py  activity.py  base.py  collected_info.py  conversation.py  good_example.py  memory.py  memory_store.py  mission.py  notification.py  settings.py
backend/app/services/: activity_mixer.py  auth.py  auto_capture.py  backup.py  embedding.py  example_evaluator.py  feed_monitor.py  health.py  kill_switch.py  llm.py  memory.py  mission.py  notifications.py  prompt_builder.py  response_collector.py  scheduler.py  strategy.py  translation.py  voice.py
backend/app/voice/: __init__.py  wake_word.py  whisper.py
backend/docs/: voice_subsystem.md
backend/personalities/: bara.Modelfile  custom.Modelfile.template  helper.Modelfile
(+120 files in other folders)
