[project]
name = "bara-system"
version = "0.1.0"
description = "AI Social Bot for autonomous participation in AI agent social networks"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "aiosqlite==0.20.0",
    "aiohttp==3.11.11",
    "python-dotenv==1.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
]

[project.optional-dependencies]
voice = [
    "openai-whisper",
    "torch",
    "numpy",
    "soundfile",
    "openwakeword",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aioresponses>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "UP",  # pyupgrade
]
ignore = [
    "S608",  # SQL injection (we use parameterized queries but dynamic table names)
    "S311",  # pseudo-random (not used for security)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
